fix title alignment on laptop

--- a/css/style.css
+++ b/css/style.css
@@ -523,7 +523,7 @@ ul {
 
   /*======== REUSABLE CLASSES ========*/
   .title--h1 {
-    width: 80%;
+    width: 28rem;
     margin-bottom: 1.7rem;
   }
 
